feat(http): finish `ExitGame` http api
1. add `ExitGame` http and unit test;
2. add `Range` method for `collection.Manager`;
3. fix `CreateRoom` and `CreateTeam` bug, we don't add both them to manager only if match success.
